--- a/studio7/map.html
+++ b/studio7/map.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="">
+    <title>CSE457 - Studio 7</title>
 </head>
 <body>
+    <h1>World Map</h1>
+
+    <div id="chart-area"></div>
 
 
-<script src="js/d3.v6.min.js"></script>
-<script src="js/topojson.min.js"></script>
+
+    <script src="js/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js" integrity="sha512-4UKI/XKm3xrvJ6pZS5oTRvIQGIzZFoXR71rRBb1y2N+PbwAsKa5tPl2J6WvbEvwN3TxQCm8hMzsl/pO+82iRlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="js/activity2.js"></script>
+
 </body>
 </html>
