--- a/studio7/map.html
+++ b/studio7/map.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="description" content="">
     <title>CSE457 - Studio 7</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>World Map</h1>
+    <h1>Airports</h1>
 
     <div id="chart-area"></div>
 
-
-
-    <script src="js/d3.min.js"></script>
+    <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js" integrity="sha512-4UKI/XKm3xrvJ6pZS5oTRvIQGIzZFoXR71rRBb1y2N+PbwAsKa5tPl2J6WvbEvwN3TxQCm8hMzsl/pO+82iRlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/activity2.js"></script>
 
